maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:2: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  left()
  ^WallFollowerMaze:3: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (estFaceMur()){
  ^