maze.wallfollower.WallFollowerMaze.scala.code
def mur():Boolean{
  left()
  if (estFaceMur()){
    return true
  }
  else{
  	return false
   } 
}


override def run() {
  while (!estSurBiscuit()){
    if (mur()){
      print(getDirection())
      right()
      if (!estFaceMur()){
        avance()
      }
      else{
        right()
      }
  }
    else{
      if (!estFaceMur()){
        avance()
      }
      else{
        right()
      }
    }
}
}